k8s/postgres-auth.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
  namespace: taskstack
spec:
  selector:
    matchLabels:
      app: auth-db
  serviceName: auth-db
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  namespace: taskstack
spec:
  clusterIP: None
  selector:
    app: auth-db
  ports:
  - port: 5432
    targetPort: 5432
