k8s/task-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task
  namespace: taskstack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
    spec:
      containers:
      - name: task
        image: taskstack/task:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet: { path: /healthz, port: 8000 }
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: /healthz, port: 8000 }
          initialDelaySeconds: 10
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: task
  namespace: taskstack
spec:
  selector:
    app: task
  ports:
  - port: 8000
    targetPort: 8000
