k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskstack-ingress
  namespace: taskstack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: taskstack.local
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 4000
      - path: /api/tasks
        pathType: Prefix
        backend:
          service:
            name: task
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
